<resources>
    <string name="app_name">D Spot Alpha</string>

    <!--Preferences-->
    <string name="preference_1">Preference 1</string>
    <string name="preference_2">Preference 2</string>
    <string name="preference_3">Preference 3</string>
    <string name="preference_4">Preference 4</string>
    <string name="preference_5">Preference 5</string>
    <string name="preference_6">Preference 6</string>

    <!--Shared Preferences Keys/IDs-->
    <string name="number_of_preferences">Number of Preferences</string>
    <string name="has_selected_preferences">D Spot Alpha</string>
    <string name="selected_prefs_amt">1</string>
    <string name="prefs1">preference1</string>
    <string name="prefs2">preference2</string>
    <string name="prefs3">preference3</string>
    <string name="prefs4">preference4</string>
    <string name="prefs5">preference5</string>
    <string name="prefs6">preference6</string>
    <string name="prefs7">preference7</string>
    <string name="prefs8">preference8</string>
    <string name="prefs9">preference9</string>

    <string name="title_activity_home01">HomeActivity01</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_account">Account</string>

    <!--GENDERS-->
    <string-array name="genders">
        <item name="gender_male">Male</item>
        <item name="gender_female">Female</item>
        <item name="gender_transgender_male">Transgender Male</item>
        <item name="gender_transgender_female">Transgender Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Category Name</string>-->
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
