<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    tools:context="com.example.myser.dspotalpha.PreferenceFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/preferencesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="Select  Preferences"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/testColour1"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/common_google_signin_btn_text_dark_disabled"
                android:tag="@string/prefs1"
                android:text="@string/preference_1"
                android:textColor="@color/testColour1"
                android:textSize="18sp"
                app:buttonTint="@color/testColour1" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/backgroundMain"
                android:tag="@string/prefs2"
                android:text="@string/preference_2"
                android:textColor="@color/testColour1"
                android:textSize="18sp"
                app:buttonTint="@color/testColour1" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/common_google_signin_btn_text_dark_disabled"
                android:tag="@string/prefs3"
                android:text="@string/preference_3"
                android:textColor="@color/testColour1"
                android:textSize="18sp"
                app:buttonTint="@color/testColour1" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/backgroundMain"
                android:tag="@string/prefs4"
                android:text="@string/preference_4"
                android:textColor="@color/testColour1"
                android:textSize="18sp"
                app:buttonTint="@color/testColour1" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/common_google_signin_btn_text_dark_disabled"
                android:tag="@string/prefs5"
                android:text="@string/preference_5"
                android:textColor="@color/testColour1"
                android:textSize="18sp"
                app:buttonTint="@color/testColour1" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/backgroundMain"
                android:tag="@string/prefs6"
                android:text="@string/preference_6"
                android:textColor="@color/testColour1"
                android:textSize="18sp"
                app:buttonTint="@color/testColour1" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
