<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    tools:context="com.example.myser.dspotalpha.PreferencesActivity">

    <!--<GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1"
            android:padding="3dp"
            app:srcCompat="@color/testColour1" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1"
            android:padding="3dp"
            app:srcCompat="@color/testColour2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1"
            android:padding="3dp"
            app:srcCompat="@color/testColour3" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1"
            android:padding="3dp"
            app:srcCompat="@color/testColour4" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1"
            android:padding="3dp"
            app:srcCompat="@color/testColour5" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1"
            android:padding="3dp"
            app:srcCompat="@color/testColour6" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1"
            android:padding="3dp"
            app:srcCompat="@color/testColour7" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1"
            android:padding="3dp"
            app:srcCompat="@color/testColour8" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1"
            android:padding="3dp"
            app:srcCompat="@color/testColour9" />
    </GridLayout>-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        android:text="SELECT YOUR PREFERENCES"
        android:textColor="@color/testColour1"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:columnCount="3"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:onClick="loadPreference"
                android:tag="@string/prefs1"
                app:srcCompat="@color/testColour1" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/prefs1"
                android:text="@string/preference_1"
                android:textColor="@color/testColour1"
                app:buttonTint="@color/testColour1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:onClick="loadPreference"
                android:tag="@string/prefs2"
                app:srcCompat="@color/testColour2" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/prefs2"
                android:text="@string/preference_2"
                android:textColor="@color/testColour1"
                app:buttonTint="@color/testColour1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:onClick="loadPreference"
                android:tag="@string/prefs3"
                app:srcCompat="@color/testColour3" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/prefs3"
                android:text="@string/preference_3"
                android:textColor="@color/testColour1"
                app:buttonTint="@color/testColour1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:onClick="loadPreference"
                android:tag="@string/prefs4"
                app:srcCompat="@color/testColour4" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/prefs4"
                android:text="@string/preference_4"
                android:textColor="@color/testColour1"
                app:buttonTint="@color/testColour1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:onClick="loadPreference"
                android:tag="@string/prefs5"
                app:srcCompat="@color/testColour7" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/prefs5"
                android:text="@string/preference_5"
                android:textColor="@color/testColour1"
                app:buttonTint="@color/testColour1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:onClick="loadPreference"
                android:tag="@string/prefs6"
                app:srcCompat="@color/testColour8" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/prefs6"
                android:text="@string/preference_6"
                android:textColor="@color/testColour1"
                app:buttonTint="@color/testColour1" />
        </LinearLayout>
    </GridLayout>

    <!--<CheckBox
        android:id="@+id/preference1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:tag="@string/prefs1"
        android:text="@string/preference_1"
        android:textColor="@color/testColour1"
        app:buttonTint="@color/testColour1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" />

    <CheckBox
        android:id="@+id/preference2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:tag="@string/prefs2"
        android:text="@string/preference_2"
        android:textColor="@color/testColour1"
        app:buttonTint="@color/testColour1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference1"
        android:layout_marginStart="8dp" />

    <CheckBox
        android:id="@+id/preference3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:tag="@string/prefs3"
        android:text="@string/preference_3"
        android:textColor="@color/testColour1"
        app:buttonTint="@color/testColour1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference2"
        android:layout_marginStart="8dp" />

    <CheckBox
        android:id="@+id/preference4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:tag="@string/prefs4"
        android:text="@string/preference_4"
        android:textColor="@color/testColour1"
        app:buttonTint="@color/testColour1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference3"
        android:layout_marginStart="8dp" />

    <CheckBox
        android:id="@+id/preference5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:tag="@string/prefs5"
        android:text="@string/preference_5"
        android:textColor="@color/testColour1"
        app:buttonTint="@color/testColour1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference4"
        android:layout_marginStart="8dp" />-->

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="saveUserPreferences"
        android:text="SAVE PREFERENCES"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/colorPrimary"
        app:itemIconTint="@android:color/background_light"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</android.support.constraint.ConstraintLayout>
